# armsom-rk3588-bsp

./: .gitattributes  README.md  common
app/lvgl_demo/: CMakeLists.txt  astyle.sh
app/lvgl_demo/cJSON/: cJSON.c  cJSON.h
app/lvgl_demo/hal/: evdev.c  evdev.h  hal_drm.c  hal_drm.h  hal_sdl.c  hal_sdl.h  key.c  key.h
app/lvgl_demo/lv_demo/: CMakeLists.txt  S00-lv_demo  main.c  main.h
app/lvgl_demo/lvgl/: lv_port_file.c  lv_port_indev.c  lv_port_indev.h
app/lvgl_demo/rk_demo/: CMakeLists.txt  S99-rk_demo  asound.conf  local_ip.c  local_ip.h  main.c  main.h  ui_resource.h
app/lvgl_demo/rk_demo/furniture_control/: coffee_machine.c  coffee_machine.h  furniture_control_ui.c  furniture_control_ui.h  icebox_ui.c  icebox_ui.h  player_ui.c  player_ui.h
app/lvgl_demo/rk_demo/home/: home_ui.c  home_ui.h
app/lvgl_demo/rk_demo/include/: RkBle.h  RkBtBase.h  RkBtSink.h  Rk_wifi.h
app/lvgl_demo/rk_demo/intercom_homepage/: ui_intercom_homepage.c  ui_intercom_homepage.h
app/lvgl_demo/rk_demo/intercom_homepage/intercom_call/: ui_intercom_call.c
app/lvgl_demo/rk_demo/intercom_homepage/video_monitor/: ui_monitor.c  ui_monitor.h
app/lvgl_demo/rk_demo/rockit/: audio_client.c  audio_in.c  audio_in.h  audio_out.c  audio_out.h  audio_server.c  audio_server.h
app/lvgl_demo/rk_demo/setting/: about_ui.c  about_ui.h  bt_ui.c  bt_ui.h  display_ui.c  display_ui.h  language_and_date_ui.c  language_and_date_ui.h  setting_ui.c  setting_ui.h  volume_ui.c  volume_ui.h  wallpaper_ui.c  wallpaper_ui.h  wifi_ui.c  wifi_ui.h
app/lvgl_demo/rk_demo/smart_home/: control_ui.c  control_ui.h  info_ui.c  info_ui.h  music_ui.c  music_ui.h  smart_home_ui.c  smart_home_ui.h
app/lvgl_demo/rk_demo/wifibt/: bt.c  bt.h  wifibt.c  wifibt.h
app/lvgl_demo/sys/: timestamp.c  trace.c  trace.h
app/rkadk/: CMakeLists.txt
app/rkadk/examples/: rkadk_photo_test.c  rkadk_player_test.c
app/rkadk/include/: rkadk_common.h  rkadk_param.h  rkadk_param_map.h  rkadk_photo.h  rkadk_player.h  rkadk_storage.h
app/rkadk/inicfg/rv1106_1103/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting_sensor_1.ini
app/rkadk/inicfg/rv1126_1109/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting_sensor_0.ini
app/rkadk/src/: CMakeLists.txt
app/rkadk/src/display/: rkadk_disp.c
app/rkadk/src/muxer/: rkadk_muxer.c
app/rkadk/src/param/: rkadk_param.c
app/rkadk/src/photo/: rkadk_photo.c
app/rkadk/src/player/: rkadk_player.c
app/rkadk/src/storage/: rkadk_storage.c
debian/: mk-image.sh  mk-rootfs-bullseye.sh
debian/overlay-debug/rockchip-test/gpu/: test_fullscreen_glmark2.sh  test_normal_glmark2.sh
debian/overlay/etc/init.d/: rockchip.sh
debian/packages-patches/blueman/: 0002-Don-t-turn-off-the-bt-power.patch
debian/packages-patches/cheese/: 0001-Fix-infinite-loop-if-thumbnailer-is-not-available.patch  0002-camera-force-using-mppvp8enc-by-default.patch  0003-camera-use-H264-encoder-and-matroska-muxer.patch
debian/ubuntu-build-service/bullseye-base-arm64/: configure
debian/ubuntu-build-service/bullseye-base-armhf/: configure
debian/ubuntu-build-service/bullseye-xfce-arm64/: configure  wget-log  wget-log.1  wget-log.2
device/rockchip/.chips/rk3588/: rockchip_rk3588_sige7_defconfig
device/rockchip/common/fonts/: source-han-sans-cn-2.004R.tar
device/rockchip/common/tools/aarch64/: perf-4.4
kernel/arch/arm64/configs/: rockchip_linux_defconfig
kernel/drivers/input/touchscreen/: Kconfig
kernel/sound/soc/codecs/: es8316.c
output/: .config.old  defconfig  final.env  initial.env
output/kconf/: .depend  conf
output/sessions/: latest
output/sessions/2024-03-20_14-03-16/: initial.env
output/sessions/2024-03-20_14-05-41/: final.env  initial.env  part-table
(+19 files in other folders)
